--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^3.0",
         "guzzlehttp/guzzle": "^6.3",
-        "tymon/jwt-auth": "1.0.0-rc.5.1"
+        "tymon/jwt-auth": "1.0.0-rc.5.1",
+        "phpmailer/phpmailer": "^6.0",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpexcel": "^1.8"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
